--- a/_styles/header.scss
+++ b/_styles/header.scss
@@ -168,5 +168,7 @@ header[data-big] {
 }
 
 header[data-big].background:before {
+  background-size: contain;
+  background-position: 50% 50%;
   opacity: 0.45;
 }
